// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePanelWithGraphic default 1`] = `
<div
  data-cy="messagePanelWithGraphic"
>
  <div
    class="css-spit4o"
    data-cy="spacingBox"
  >
    <img
      alt=""
      class="css-1jv97ae"
      role="presentation"
      src="http://placehold.it/350x150"
    />
  </div>
  <div
    class="css-5z0bq0"
    data-cy="spacingBox"
  >
    <div
      class="css-lkxn4w"
      data-cy="spacingBox"
    >
      <h2
        class="rmTextMargins css-ivxmqa"
        data-cy="headingText2"
      >
        Heading
      </h2>
    </div>
    <div
      class="css-1j4gpfm"
    >
      Body content
    </div>
  </div>
</div>
`;

exports[`MessagePanelWithGraphic renders with primary and secondary actions 1`] = `
<div
  data-cy="messagePanelWithGraphic"
>
  <div
    class="css-spit4o"
    data-cy="spacingBox"
  >
    <img
      alt=""
      class="css-1jv97ae"
      role="presentation"
      src="http://placehold.it/350x150"
    />
  </div>
  <div
    class="css-spit4o"
    data-cy="spacingBox"
  >
    <div
      class="css-lkxn4w"
      data-cy="spacingBox"
    >
      <h2
        class="rmTextMargins css-ivxmqa"
        data-cy="headingText2"
      >
        Heading
      </h2>
    </div>
    <div
      class="css-1j4gpfm"
    >
      Body content
    </div>
  </div>
  <div
    class="css-bhf0my"
    data-cy="flex"
  >
    <div
      class="css-149ndna"
      data-cy="flexItem"
    >
      <button
        class="css-1qbr1ah"
        data-cy="secondaryButton"
        tabindex="0"
        type="button"
      >
        <span
          class=""
        >
          Secondary
        </span>
      </button>
    </div>
    <div
      class="css-149ndna"
      data-cy="flexItem"
    >
      <button
        class="css-tc1f66"
        data-cy="primaryButton"
        tabindex="0"
        type="button"
      >
        <span
          class=""
        >
          Primary
        </span>
      </button>
    </div>
  </div>
</div>
`;
